ribbit/tests/ui/struct_nonzero.stderr
error: At least one field must be non-zero for struct to be non-zero
 --> tests/ui/struct_nonzero.rs:2:21
  |
2 | #[ribbit(size = 32, nonzero)]
  |                     ^^^^^^^
